
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uuid_t ;


 int info (char*,char const*,...) ;
 scalar_t__ strcmp (char const*,char*) ;
 scalar_t__ unlikely (int) ;
 int uuid_parse (char const*,int ) ;
 int uuid_unparse_lower (int ,char*) ;

int regenerate_guid(const char *guid, char *result) {
    uuid_t uuid;
    if(unlikely(uuid_parse(guid, uuid) == -1)) {
        info("Registry: GUID '%s' is not a valid GUID.", guid);
        return -1;
    }
    else {
        uuid_unparse_lower(uuid, result);





    }

    return 0;
}
