; ModuleID = '/home/carl/AnghaBench/netdata/registry/extr_registry_internals.c_regenerate_guid.c'
source_filename = "/home/carl/AnghaBench/netdata/registry/extr_registry_internals.c_regenerate_guid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [41 x i8] c"Registry: GUID '%s' is not a valid GUID.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @regenerate_guid(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @uuid_parse(i8* %7, i32 %8)
  %10 = icmp eq i32 %9, -1
  %11 = zext i1 %10 to i32
  %12 = call i64 @unlikely(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 (i8*, i8*, ...) @info(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i8* %15)
  store i32 -1, i32* %3, align 4
  br label %22

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @uuid_unparse_lower(i32 %18, i8* %19)
  br label %21

21:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %21, %14
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @uuid_parse(i8*, i32) #1

declare dso_local i32 @info(i8*, i8*, ...) #1

declare dso_local i32 @uuid_unparse_lower(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
